# ai-memory-hackathon

./: .env.example  .gitignore  AGENTS.md  README.md  SETUP-ADDITIONS.md  SETUP.md  STRATEGY.md  download-from-spaces.py  pyproject.toml  restore-snapshots.py
.do/: procureguard.yaml
lance-to-qdrant/: main.py  pyproject.toml
procureguard/: Dockerfile  agent.py  app.py  graph_viz.py  pyproject.toml  tools.py
procureguard/static/: app.html  landing.html
project1-procurement-search/: app.py
project3-anomaly-detective/: app.py
