[project]
name = "procureguard"
version = "0.1.0"
description = "ProcureGuard - AI Procurement Auditor with Structured Memory"
requires-python = ">=3.12"
dependencies = [
    "cognee==0.4.1",
    "cognee-community-vector-adapter-qdrant==0.1.0",
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "requests>=2.31",
    "uvicorn>=0.40.0",
    "sse-starlette>=2.0.0",
    "transformers",
]
